Bug 443067 - Disk Cache overflow when downloading large files. r=bz

--HG--
extra : rebase_source : 23492fb28c073b676d193703bb9bb6a2976a462a