netwerk/cache/nsDiskCacheDevice.cpp
@@ -784,8 +784,8 @@ nsDiskCacheDevice::OnDataSizeChange(nsCacheEntry * entry, PRInt32 deltaSize)
 
     PRUint32  sizeK = ((entry->DataSize() + 0x03FF) >> 10); // round up to next 1k
 
-    NS_ASSERTION(sizeK < USHRT_MAX, "data size out of range");
-    NS_ASSERTION(newSizeK < USHRT_MAX, "data size out of range");
+    NS_ASSERTION(sizeK <= USHRT_MAX, "data size out of range");
+    NS_ASSERTION(newSizeK <= USHRT_MAX, "data size out of range");
 
     // pre-evict entries to make space for new data
     PRUint32  targetCapacity = mCacheCapacity > (newSizeK - sizeK)
